Fringer's Datapad
=================

RELEASE NOTES
-------------

1.0.11
------

- Strain and wound adjustments due to morality was incorrectly doubled.

- Clicking the TOTAL XP, UNUSED XP or USED XP boxes now brings up the XP allocation dialog.

- The total XP, Obligations, Duty and Morality are now shown in the EARNED & AQUIRED box.

- Inventory list and check list items now adjust to fit text.

1.0.10
------

- The setting "Locked" (which allows you to hide XP and cash) and "Hide Talents" (which allows you to hide talents that are "implemented") are now global, and work correctly when changing characters/accounts.

- Added version information to setup dialog.

- Added SWCharGen 1.7.0 data.

- Fixed bug: When reading SWCharGen 1.7.0 character sheets, Datapad was loading all Talents instead of just those purchased.